      all the time (not just when [Alt] is held) via a new
      "--altprintalways" command-line option (and "altprint=always" config.
      file option).

    * Similarly, printer dialog can be prevented ([Alt] key has no effect)
      via a new "--altprintnever" option (and "altprint=never").
      (Default (where [Alt] must be held to show dialog) is "altprintmod".)

  * Bug fixes:
    -------------------
    * Untranslated text in right-to-left languages (e.g., Hebrew) are no
      longer displayed backwards.

    * [Alt] to bring up print dialog had to be held while hitting 'Ok' to
      confirm print.  This was a bug!  Fixed!

    * Lockfile now cleared upon exit, allowing Tux Paint to be re-launched
      immediately.
      
    * Hotspot for 'tiny' crosshair mouse pointer shape is now
      correct in 16x16 size (used on Mac OS X).

    * Delete thumbnails from ".thumbs" subdirectory.
      Marcin 'Shard' Konicki <shard at beosjournal.org>

    * tuxpaint-import.sh now uses single brackets when testing for "--help".
      (Apparently, the "[[...]]" version didn't work some places.)
      Jeff Smith <whydoubt@yahoo.com>

    * Failed to install default locale fonts.  Fixed.
      kyjo44 <kyjo44@users.sourceforge.net>

  * Compiling, porting and packaging updates:
    -----------------------------------------
    * Created Makefile to convert HTML documentation into plaintext using Links
      (I can never remember the precise options!)

    * *_PREFIX variables in Makefile no longer need trailing '/'.

    * Added "Categories" to the 'tuxpaint.desktop' file
      ("Education," "RasterGraphics," "Graphics" and "Art").
      
    * Added 'win32' target to Makefile, for use on Windows with MinGW/MSYS.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Now links with 'shlwapi.dll' so that it works on Windows 98.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Added GetDefaultSaveDir(suffix) which fetches the default